apply plugin: 'com.android.application'

android {
    compileSdkVersion 31
    buildToolsVersion "25.0.1"
    defaultConfig {
        applicationId "com.jingwei.cai.luke"
        minSdkVersion 15
        targetSdkVersion 31
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    defaultConfig {
        javaCompileOptions {
            annotationProcessorOptions {
                arguments = [
                        'jvmArgs': '--add-opens java.base/java.io=ALL-UNNAMED'
                ]
            }
        }
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2') {
        exclude group: 'com.android.support', module: 'support-annotations'
    }
    implementation 'com.android.support:appcompat-v7:25.0.1'
    implementation 'com.android.support:design:25.0.1'
    testImplementation 'junit:junit:4.12'
    implementation 'com.google.firebase:firebase-appindexing:10.2.1'
    // Add other dependencies here
}
